--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
   "require": {},
   "require-dev": {
     "phpunit/phpunit": "^11.1"
+  },
+  "scripts": {
+    "phpunit": "./vendor/bin/phpunit"
   }
 }
