--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   },
   "require": {},
   "require-dev": {
-    "phpunit/phpunit": "^11.1"
+    "phpunit/phpunit": "^11.1",
+    "squizlabs/php_codesniffer": "^3.9.1"
   },
   "scripts": {
     "phpunit": "./vendor/bin/phpunit"
