--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "squizlabs/php_codesniffer": "^3.9.1"
   },
   "scripts": {
-    "phpunit": "./vendor/bin/phpunit"
+    "phpunit": "./vendor/bin/phpunit",
+    "phpcs": "./vendor/bin/phpcs --standard=phpcs.xml"
   }
 }
