--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
       "App\\": "src/"
     }
   },
-  "require": {},
   "require-dev": {
     "phpunit/phpunit": "^11.1",
-    "squizlabs/php_codesniffer": "^3.9.1"
+    "squizlabs/php_codesniffer": "^3.9.1",
+    "phpstan/phpstan": "^1.10"
   },
   "scripts": {
     "phpunit": "./vendor/bin/phpunit",
